@@ -27,7 +27,9 @@ env:
     - DISPOSABLE_IRODS_VERSION="1.2"
     - JANSSON_VERSION="2.7"
     - BATON_VERSION="1.0.0"
-    - TRAVIS_NODE_VERSION="4.5.0"
+    - TRAVIS_NODE_VERSION="6.12.2"
+    - TRAVIS_NPM_VERSION="4.5.0"
+    - TRAVIS_YARN_VERSION="1.3.2"
     - RENCI_URL=ftp://ftp.renci.org
     - WTSI_NPG_GITHUB_URL=https://github.com/wtsi-npg
     - IRODS_VERSION=4.1.10 PG_PLUGIN_VERSION=1.10 PLATFORM=ubuntu12
