@@ -1,5 +1,6 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - switch to node 6.12.2 in travis
  - stop generating DBIx classes for unused tables
  - tiny tweaks to rna and verify bam id help links
  - ensure, where practical, that saving and retrieving qc outcomes
